# golem-forge

./: .gitignore  LICENSE.md  Makefile  README-MCP.md  README.md  installation-prompt.md  mcp_server.py  names.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: golem-constitution.mdc  minimodels.mdc
domains/: creative.md  grants.md  infrastructure.md  labops.md  manuscript.md  measurement.md  planning.md  teaching.md
forge/: cast-from-yaml.py  cast.sh  list.sh  manifesto.md  preamble.md
golemforge/: .gitignore  README.md  __init__.py  mcp_server.py  names.json  pyproject.toml
golemforge/personalities/: pragmatic-efficient.md  precise-formal.md
golemforge/roles/: coordinator-planner.md  research-navigator.md
golems/: strategist-librarian-grants.md
golemspecs/: aurora-figure-designer.yaml  george-foreman.yaml  jamal-python-coder.yaml  kaylynn-bayesian-statistician.yaml  mira-academic-author.yaml  owen-peer-reviewer.yaml
personalities/: analytic-critical.md  archivist.md  builder.md  explainer.md  explanatory-empathetic.md  minimalist.md  provocateur.md  rigorous.md  steward.md  strategist.md  structural-constructive.md
roles/: analyst.md  coder-engineer.md  coder.md  designer.md  documentation-specialist.md  editor.md  engineer.md  experiment-design-specialist.md  foreman.md  librarian.md  reviewer-critic.md  reviewer.md  teacher.md  writer.md
skills/coding/: bash.md  figure-design.md  python.md  r.md  reproducibility-engineering.md  sql.md  stan-pymc.md
templates/: base_system.md
tests/: test_mcp_server.py  test_mcp_stdio.py
(+27 files in other folders)
