[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golemforge"
version = "0.1.0"
description = "Cursor-compatible MCP server for forging composite assistant prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0"
]

[project.scripts]
golemforge-mcp = "mcp_server:main"
golemforge-install-cursor = "mcp_server:install_cursor_cli"

[tool.setuptools]
py-modules = ["mcp_server"]
