[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golemforge"
version = "0.1.0"
description = "Cursor-compatible MCP server for forging composite assistant prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0"
]

[project.scripts]
golemforge-mcp = "golemforge:main"
golemforge-install-cursor = "golemforge:install_cursor_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["golemforge*"]

[tool.setuptools.package-data]
golemforge = [
  "skills/**/*.md",
  "roles/*.md",
  "personalities/*.md",
  "templates/*.md",
  "names.json",
]
